# eudev

./: Makefile-globals.am  Makefile.am  configure.ac
hwdb/: Makefile.am
man/: Makefile.am  udev.xml
rule_generator/: Makefile.am  rule_generator.functions
rules/: Makefile.am
src/accelerometer/: Makefile.am
src/ata_id/: Makefile.am
src/cdrom_id/: Makefile.am
src/collect/: Makefile.am  collect.c
src/gudev/: Makefile.am
src/libudev/: Makefile.am  libudev-device-private.c  libudev-device.c  libudev-enumerate.c  libudev-queue-private.c  libudev-queue.c
src/mtd_probe/: Makefile.am
src/scsi_id/: Makefile.am
src/udev/: Makefile.am  udev-ctrl.c  udev-node.c  udev-rules.c  udev-watch.c  udevadm-info.c  udevadm-settle.c  udevd.c
src/v4l_id/: Makefile.am
test/: Makefile.am  test-udev.c
